# golf-stats-tdd-example

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/example/: __init__.py  course.py  game.py  player.py  webapp.py
src/example/repositories/: inmemory.py
tests/: test_app.py  test_course.py  test_game.py  test_player.py
